Make sure the ordering of Maven repos in tests matches the ordering of the repos in Mojos